# chrono-paths

./: .gitignore  README.md  app.py  pyproject.toml  test_app.py
src/application/usecases/: get_file_destine_folder_usecase.py  organize_files_usecase.py  test_get_file_destine_folder_usecase.py  test_organize_files_usecase.py
src/domain/: argument.py  folder.py  test_argument.py  test_folder.py
src/domain/validators/: __init__.py  android_mobile_file_validator.py  cam_file_validator.py  cymera_app_file_validator.py  mac_file_validator.py  test_android_mobile_file_validator.py  test_cam_file_validator.py  test_cymera_app_file_validator.py  test_mac_file_validator.py  test_whatsapp_file_validator.py  test_whatsapp_image_validator.py  test_whatsapp_video_validator.py  whatsapp_file_validator.py  whatsapp_image_validator.py  whatsapp_video_validator.py
src/infrastructure/: logger.py  test_logger.py
src/presentation/script/: app.py
src/utils/: date_time.py  logger.py  test_date_time.py
